--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ name = bound
 author = Chris Haumesser
 author-email = chris.haumesser@gmail.com
 summary = spam/scam domain blacklisting for unbound
-description-file = README.md
+description-file = README.rst
 requires-python = >=3.6
 home-page = https://github.com/wryfi/bound
 classifier =
